// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should generate TypeScript user imports with absolute paths 1`] = `
"// This file is automatically generated by Cosmos. Add it to .gitignore and
// only edit if you know what you're doing.

import { RendererConfig, UserModuleWrappers } from 'react-cosmos-core';

import '/Users/ovidiu/cosmos/src/polyfills';
import '/Users/ovidiu/cosmos/src/global.css';

export const rendererConfig: RendererConfig = {
  "playgroundUrl": "http://localhost:5002"
};

const fixtures = {
  'src/Counter/Counter.fixture.tsx': { getModule: () => import('/Users/ovidiu/cosmos/src/Counter/Counter.fixture') },
  'src/CounterButton/CounterButton.fixture.tsx': { getModule: () => import('/Users/ovidiu/cosmos/src/CounterButton/CounterButton.fixture') }
};

const decorators = {
  'src/cosmos.decorator.tsx': { getModule: () => import('/Users/ovidiu/cosmos/src/cosmos.decorator') }
};

export const moduleWrappers: UserModuleWrappers = {
  lazy: true,
  fixtures,
  decorators
};
"
`;

exports[`should generate TypeScript user imports with relative paths 1`] = `
"// This file is automatically generated by Cosmos. Add it to .gitignore and
// only edit if you know what you're doing.

import { RendererConfig, UserModuleWrappers } from 'react-cosmos-core';

import './polyfills';
import './global.css';

export const rendererConfig: RendererConfig = {
  "playgroundUrl": "http://localhost:5002"
};

const fixtures = {
  'src/Counter/Counter.fixture.tsx': { getModule: () => import('./Counter/Counter.fixture') },
  'src/CounterButton/CounterButton.fixture.tsx': { getModule: () => import('./CounterButton/CounterButton.fixture') }
};

const decorators = {
  'src/cosmos.decorator.tsx': { getModule: () => import('./cosmos.decorator') }
};

export const moduleWrappers: UserModuleWrappers = {
  lazy: true,
  fixtures,
  decorators
};
"
`;

exports[`should generate user imports with absolute paths 1`] = `
"// This file is automatically generated by Cosmos. Add it to .gitignore and
// only edit if you know what you're doing.

import '/Users/ovidiu/cosmos/src/polyfills.ts';
import '/Users/ovidiu/cosmos/src/global.css';

export const rendererConfig = {
  "playgroundUrl": "http://localhost:5002"
};

const fixtures = {
  'src/Counter/Counter.fixture.tsx': { getModule: () => import('/Users/ovidiu/cosmos/src/Counter/Counter.fixture.tsx') },
  'src/CounterButton/CounterButton.fixture.tsx': { getModule: () => import('/Users/ovidiu/cosmos/src/CounterButton/CounterButton.fixture.tsx') }
};

const decorators = {
  'src/cosmos.decorator.tsx': { getModule: () => import('/Users/ovidiu/cosmos/src/cosmos.decorator.tsx') }
};

export const moduleWrappers = {
  lazy: true,
  fixtures,
  decorators
};
"
`;

exports[`should generate user imports with relative paths 1`] = `
"// This file is automatically generated by Cosmos. Add it to .gitignore and
// only edit if you know what you're doing.

import './polyfills.ts';
import './global.css';

export const rendererConfig = {
  "playgroundUrl": "http://localhost:5002"
};

const fixtures = {
  'src/Counter/Counter.fixture.tsx': { getModule: () => import('./Counter/Counter.fixture.tsx') },
  'src/CounterButton/CounterButton.fixture.tsx': { getModule: () => import('./CounterButton/CounterButton.fixture.tsx') }
};

const decorators = {
  'src/cosmos.decorator.tsx': { getModule: () => import('./cosmos.decorator.tsx') }
};

export const moduleWrappers = {
  lazy: true,
  fixtures,
  decorators
};
"
`;
